--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@robingenz/capacitor-managed-configurations",
+  "name": "@capawesome/capacitor-managed-configurations",
   "version": "0.1.4",
   "description": "Capacitor plugin to access managed configuration settings.",
   "main": "dist/plugin.cjs.js",
@@ -11,17 +11,27 @@
     "android/build.gradle",
     "dist/",
     "ios/Plugin/",
-    "RobingenzCapacitorManagedConfigurations.podspec"
+    "CapawesomeCapacitorManagedConfigurations.podspec"
   ],
   "author": "Robin Genz <mail@robingenz.dev>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/robingenz/capacitor-managed-configurations.git"
+    "url": "git+https://github.com/capawesome-team/capacitor-managed-configurations.git"
   },
   "bugs": {
-    "url": "https://github.com/robingenz/capacitor-managed-configurations/issues"
+    "url": "https://github.com/capawesome-team/capacitor-managed-configurations/issues"
   },
+  "funding": [
+    {
+      "type": "github",
+      "url": "https://github.com/sponsors/capawesome-team/"
+    },
+    {
+      "type": "opencollective",
+      "url": "https://opencollective.com/capawesome"
+    }
+  ],
   "keywords": [
     "capacitor",
     "plugin",
@@ -77,5 +87,8 @@
     "android": {
       "src": "android"
     }
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
